[tool.poetry]
name = "opentracing-asgi"
version = "0.1.0"
description = "ASGI middleware reporting to the OpenTracing API"
authors = ["Mirumee Software <hello@mirumee.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
opentracing = "^2.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.4", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
